--- a/public/controls_question3.html
+++ b/public/controls_question3.html
@@ -94,6 +94,7 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
+        <li><a href="profile.html">Profile</a></li> <!-- Added profile link -->
       </ul>
     </nav>
     <p>Time left: <span id="timer">10:00</span></p>
@@ -193,3 +194,4 @@
   </script>
 </body>
 </html>
+
