--- a/public/controls_question3.html
+++ b/public/controls_question3.html
@@ -170,7 +170,19 @@
     // Start the countdown and update every second
     const timerInterval = setInterval(updateTimer, 1000);
 
-    // Form submission event to save answer and navigate to the next question
+    // Scoring Logic
+    function calculateScore(selectedAnswer) {
+      let score = parseInt(safeLocalStorageGetItem('quizScore')) || 0;  // Get current score or initialize to 0
+      const correctAnswer = "A-9&7"; // Correct answer for Control Question 3
+
+      if (selectedAnswer === correctAnswer) {
+        score++;  // Increment score for correct answer
+      }
+
+      safeLocalStorageSetItem('quizScore', score);  // Save updated score
+    }
+
+    // Form submission event to save answer, calculate score, and navigate to the next question
     document.getElementById('control-q3').addEventListener('submit', function(e) {
       e.preventDefault();
       clearInterval(timerInterval); // Stop timer on form submission
@@ -185,6 +197,9 @@
       userAnswers['control_q3'] = selectedAnswer;
       safeLocalStorageSetItem('userAnswers', JSON.stringify(userAnswers));
 
+      // Calculate and update the score
+      calculateScore(selectedAnswer);
+
       // Save remaining time
       safeLocalStorageSetItem('quizTimeLeft', timeLeft);
 
@@ -194,4 +209,3 @@
   </script>
 </body>
 </html>
-
