--- a/public/index.html
+++ b/public/index.html
@@ -72,14 +72,14 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="sign-up.html">Sign Up</a></li>
-                <li><a href="login.html">Login</a></li>
-                <li><a href="profile.html">Profile</a></li>
-                <li><a href="home.html">Start Test</a></li>
+                <li><a href="./public/index.html">Home</a></li>
+                <li><a href="./public/sign-up.html">Sign Up</a></li>
+                <li><a href="./public/login.html">Login</a></li>
+                <li><a href="./public/profile.html">Profile</a></li>
+                <li><a href="./public/home.html">Start Test</a></li>
             </ul>
         </nav>
-        <img src="images/logo.png" alt="Drive Mzansi Logo">
+        <img src="./public/images/logo.png" alt="Drive Mzansi Logo">
         <div class="slogan">
             <p>Master the K53 with Drive Mzansi - Your Journey to Passing the Test Starts Here!</p>
         </div>
