--- a/public/results.html
+++ b/public/results.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Results - Drive Mzansi</title>
-  <link rel="stylesheet" href="public/css/styles.css">
+  <link rel="stylesheet" href="css/styles.css">
   <style>
     /* Consistent styling */
     body {
@@ -103,8 +103,6 @@
   <footer>
     <p>&copy; 2024 Drive Mzansi</p>
   </footer>
-
-  <div id="root"></div>  <!-- React will render here -->
 
   <script>
     const correctAnswers = {
