restart test button

--- a/public/results.html
+++ b/public/results.html
@@ -6,12 +6,13 @@
   <title>Results - Drive Mzansi</title>
   <link rel="stylesheet" href="public/css/styles.css">
   <style>
-    /* Page consistency and styling */
+    /* Consistent Page Styling */
     body {
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
       text-align: center;
+      background-color: #f4f4f4;
     }
 
     header {
@@ -91,7 +92,7 @@
     <p id="score"></p>
     <p id="percentage"></p>
     <p id="no-results" class="no-results"></p>
-    <button class="button" id="restart-quiz">Start Test</button>
+    <button class="button" id="restart-quiz">Restart Test</button>
   </main>
 
   <footer>
@@ -101,3 +102,4 @@
   <script src="results.js"></script>
 </body>
 </html>
+
