--- a/public/results.html
+++ b/public/results.html
@@ -4,15 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Results - Drive Mzansi</title>
-  <link rel="stylesheet" href="public/css/styles.css">
+  <link rel="stylesheet" href="css/styles.css">
   <style>
-    /* Consistent Page Styling */
+    /* Inline CSS for additional styling */
     body {
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
       text-align: center;
-      background-color: #f4f4f4;
     }
 
     header {
@@ -102,4 +101,5 @@
   <script src="results.js"></script>
 </body>
 </html>
+
 
