correct paths updated

--- a/public/results.html
+++ b/public/results.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Results - Drive Mzansi</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="public/css/style.css"> <!-- Corrected path to style.css -->
   <style>
-    /* Inline CSS for additional styling */
+    /* Additional inline styling */
     body {
       font-family: Arial, sans-serif;
       margin: 0;
@@ -91,15 +91,14 @@
     <p id="score"></p>
     <p id="percentage"></p>
     <p id="no-results" class="no-results"></p>
-    <button class="button" id="restart-quiz">Restart Test</button>
+    <button class="button" id="restart-quiz">Start Test</button>
   </main>
 
   <footer>
     <p>&copy; 2024 Drive Mzansi</p>
   </footer>
 
-  <script src="results.js"></script>
+  <!-- Corrected JavaScript path -->
+  <script src="public/js/results.js"></script>
 </body>
 </html>
-
-
