--- a/public/results.html
+++ b/public/results.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Results - Drive Mzansi</title>
-  <link rel="stylesheet" href="public/css/style.css"> <!-- Corrected path to style.css -->
+  <!-- Corrected path to style.css -->
+  <link rel="stylesheet" href="css/style.css"> 
   <style>
     /* Additional inline styling */
     body {
@@ -91,7 +92,7 @@
     <p id="score"></p>
     <p id="percentage"></p>
     <p id="no-results" class="no-results"></p>
-    <button class="button" id="restart-quiz">Start Test</button>
+    <button class="button" id="restart-quiz">Restart Test</button>
   </main>
 
   <footer>
@@ -99,6 +100,6 @@
   </footer>
 
   <!-- Corrected JavaScript path -->
-  <script src="public/js/results.js"></script>
+  <script src="js/results.js"></script>
 </body>
 </html>
