--- a/public/results.html
+++ b/public/results.html
@@ -4,79 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Results - Drive Mzansi</title>
-  <!-- Corrected path to style.css -->
-  <link rel="stylesheet" href="css/style.css"> 
-  <style>
-    /* Additional inline styling */
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      text-align: center;
-    }
-
-    header {
-      background-color: #f8f8f8;
-      padding: 20px;
-    }
-
-    nav {
-      background-color: #333;
-      overflow: hidden;
-    }
-
-    nav ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      justify-content: center;
-    }
-
-    nav li {
-      padding: 14px 20px;
-    }
-
-    nav a {
-      color: white;
-      text-decoration: none;
-    }
-
-    nav a:hover {
-      background-color: #ddd;
-      color: black;
-    }
-
-    main {
-      padding: 20px;
-    }
-
-    footer {
-      background-color: #f8f8f8;
-      padding: 10px;
-    }
-
-    .button {
-      padding: 10px 15px;
-      background-color: #4CAF50;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      margin-top: 20px;
-    }
-
-    .button:hover {
-      background-color: #45a049;
-    }
-
-    .no-results {
-      color: red;
-      font-weight: bold;
-    }
-  </style>
+  <!-- Corrected path to the CSS file for consistency -->
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <!-- Header with Navigation -->
   <header>
     <nav>
       <ul>
@@ -87,19 +19,60 @@
     <img src="images/logo.png" alt="Drive Mzansi Logo" width="300" height="300">
   </header>
 
+  <!-- Main Content Area -->
   <main>
     <h2>Your Results</h2>
     <p id="score"></p>
     <p id="percentage"></p>
-    <p id="no-results" class="no-results"></p>
-    <button class="button" id="restart-quiz">Restart Test</button>
+    <button class="button" id="restart-quiz">Start Test</button>
   </main>
 
+  <!-- Footer -->
   <footer>
     <p>&copy; 2024 Drive Mzansi</p>
   </footer>
 
-  <!-- Corrected JavaScript path -->
-  <script src="js/results.js"></script>
+  <!-- JavaScript for Calculating and Displaying Results -->
+  <script>
+    const correctAnswers = {
+      'cq1': 'C', 'cq2': 'C', 'cq3': 'B',
+      'rq1': 'A', 'rq2': 'C', 'rq3': 'C',
+      'sq1': 'A', 'sq2': 'B', 'sq3': 'C'
+    };
+
+    function displayResults() {
+      const userAnswers = JSON.parse(localStorage.getItem('userAnswers')) || {};
+      let score = 0;
+      const totalQuestions = Object.keys(correctAnswers).length;
+
+      // Calculate score
+      for (const question in correctAnswers) {
+        if (userAnswers[question] === correctAnswers[question]) {
+          score++;
+        }
+      }
+
+      // Calculate percentage
+      const percentage = (score / totalQuestions) * 100;
+
+      // Display results
+      document.getElementById('score').textContent = `You got ${score} out of ${totalQuestions}.`;
+      document.getElementById('percentage').textContent = `Your score is ${percentage.toFixed(2)}%.`;
+
+      // Save to localStorage
+      const pastResults = JSON.parse(localStorage.getItem('testResults')) || [];
+      pastResults.push({ score, percentage, date: new Date().toLocaleDateString() });
+      localStorage.setItem('testResults', JSON.stringify(pastResults));
+    }
+
+    function restartQuiz() {
+      localStorage.removeItem('userAnswers'); // Clear answers
+      localStorage.removeItem('quizTimeLeft'); // Clear timer
+      window.location.href = "home.html"; // Redirect to start
+    }
+
+    document.getElementById('restart-quiz').addEventListener('click', restartQuiz);
+    document.addEventListener('DOMContentLoaded', displayResults);
+  </script>
 </body>
 </html>
