--- a/public/controls_question3.html
+++ b/public/controls_question3.html
@@ -193,8 +193,8 @@
       // Get the selected answer
       const selectedAnswer = document.querySelector('input[name="cq3"]:checked').value;
 
-      // Save the answer under the key 'control_q3' for this specific question
-      userAnswers['control_q3'] = selectedAnswer;
+      // Save the answer under the key 'control-question3' for this specific question
+      userAnswers['control-question3'] = selectedAnswer;
       safeLocalStorageSetItem('userAnswers', JSON.stringify(userAnswers));
 
       // Calculate and update the score
