--- a/public/rules_question1.html
+++ b/public/rules_question1.html
@@ -108,11 +108,11 @@
       <p>Stop lights (braking lights) must be visible in sunlight at a distance of at least:</p>
     </div>
 
-    <form id="rules-q1" style="text-align: center;">
-      <input type="radio" name="rq1" value="A-30 Meters" required> A-30 Meters <br>
-      <input type="radio" name="rq1" value="B-40 Meters"> B-40 Meters <br>
-      <input type="radio" name="rq1" value="C-50 Meters"> C-50 Meters <br>
-      <input type="radio" name="rq1" value="D-35 Meters"> D-35 Meters <br>
+    <form id="rule-question1" style="text-align: center;">
+      <input type="radio" name="rule-question1" value="A-30 Meters" required> A-30 Meters <br>
+      <input type="radio" name="rule-question1" value="B-40 Meters"> B-40 Meters <br>
+      <input type="radio" name="rule-question1" value="C-50 Meters"> C-50 Meters <br>
+      <input type="radio" name="rule-question1" value="D-35 Meters"> D-35 Meters <br>
 
       <div class="button-container">
         <a href="controls_question3.html" class="button back-button">Back</a> <!-- Back button -->
@@ -173,7 +173,7 @@
     const timerInterval = setInterval(updateTimer, 1000);
 
     // Form submission event to save answer and navigate to the next question
-    document.getElementById('rules-q1').addEventListener('submit', function(e) {  // Update form ID
+    document.getElementById('rule-question1').addEventListener('submit', function(e) {  // Update form ID
       e.preventDefault();
       clearInterval(timerInterval); // Stop timer on form submission
       
@@ -181,7 +181,7 @@
       const userAnswers = JSON.parse(safeLocalStorageGetItem('userAnswers')) || {};
 
       // Get the selected answer
-      const selectedAnswer = document.querySelector('input[name="rq1"]:checked').value;  // Update question selector
+      const selectedAnswer = document.querySelector('input[name="rule-question1"]:checked').value;  // Update question selector
 
       // Save the answer under the key 'rules_q1' for this specific question
       userAnswers['rules_q1'] = selectedAnswer;
