--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
                 <li><a href="sign-up.html">Sign Up</a></li>
                 <li><a href="login.html">Login</a></li>
                 <li><a href="profile.html">Profile</a></li>
-                <li><a href="home.html">Start Test</a></li>
+                <li><a href="home.html">Take the Test</a></li>
             </ul>
         </nav>
         <img src="images/logo.png" alt="Drive Mzansi Logo">
