--- a/public/index.html
+++ b/public/index.html
@@ -17,20 +17,21 @@
             background-color: #f8f8f8;
             padding: 20px;
         }
+        /* Centered Navigation Styles */
         nav {
             background-color: #333;
             overflow: hidden;
-            text-align: left;
-            padding: 0 20px;
+            padding: 10px 0;
         }
         nav ul {
             list-style-type: none;
             margin: 0;
             padding: 0;
             display: flex;
+            justify-content: center; /* Center navigation items */
         }
         nav li {
-            padding: 14px 20px;
+            padding: 0 20px;
         }
         nav a {
             color: white;
@@ -39,6 +40,7 @@
         nav a:hover {
             background-color: #ddd;
             color: black;
+            border-radius: 4px;
         }
         main {
             padding: 20px;
@@ -49,10 +51,12 @@
             height: 300px;
             margin: 0 auto;
         }
+        /* Italic Slogan Styling */
         .slogan {
             font-size: 18px;
             color: #333;
             margin-top: 10px;
+            font-style: italic; /* Apply italic font style to slogan */
         }
         footer {
             background-color: #f8f8f8;
@@ -76,7 +80,6 @@
                 <li><a href="sign-up.html">Sign Up</a></li>
                 <li><a href="login.html">Login</a></li>
                 <li><a href="profile.html">Profile</a></li>
-                <li><a href="home.html">Take the Test</a></li>
             </ul>
         </nav>
         <img src="images/logo.png" alt="Drive Mzansi Logo">
